# a-charts

./: .editorconfig  .gitignore  .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: fetch-data.ts
src/: App.scss  App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/resources/: data.json
src-tauri/src/: app_handle.rs  lib.rs  main.rs
src/api/: index.tsx
src/context/: index.tsx
src/pages/: about.page.tsx  index.page.tsx
