[package]
name = "a-chart"
version = "0.1.0"
description = "A股云图"
authors = ["michaelbguo"]
edition = "2021"

[lib]
name = "a_chart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
