[package]
name = "a-chart"
version = "0.1.0"
description = "A股云图"
authors = ["michaelbguo"]
edition = "2021"

[lib]
name = "a_chart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "^1.0.40"
derive_more = { version = "1.0.0", features = ["full"] }
lazy_static = "^1.5.0"
rayon = "^1.9.0"
regex = "^1.10.4"
reqwest = { version = "^0.12.4", features = ["json"] }
serde = { version = "^1.0.188", features = ["derive"] }
serde_json = "^1.0.107"
async-trait = "^0.1.82"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-websocket = "2"
tauri-plugin-upload = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
